--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,11 @@
 MONGODB_URI=mongodb://localhost:27017
 REDIS_URL=redis://localhost:6379
 
-# OpenAI/DashScope 配置
-OPENAI_API_KEY=your_api_key_here
+# 阿里云 DashScope 配置
+OPENAI_API_KEY=sk-your-api-key-here
 OPENAI_MODEL=qwen-plus
 OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+EMBEDDING_MODEL=text-embedding-v2
 
 # 应用配置
 APP_HOST=0.0.0.0
