--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,11 @@
     "pinia": "^2.1.7",
     "axios": "^1.6.5",
     "element-plus": "^2.5.3",
-    "@element-plus/icons-vue": "^2.3.1"
+    "@element-plus/icons-vue": "^2.3.1",
+    "md-editor-v3": "^4.0.0",
+    "marked": "^11.0.0",
+    "github-markdown-css": "^5.4.0",
+    "highlight.js": "^11.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
