--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tinymce/tinymce-vue": "^6.3.0",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.5",
     "element-plus": "^2.5.3",
     "github-markdown-css": "^5.4.0",
@@ -19,8 +19,7 @@
     "marked": "^11.0.0",
     "md-editor-v3": "^4.0.0",
     "pinia": "^2.1.7",
-    "tinymce": "^8.3.2",
-    "tinymce-lang": "^0.0.1",
+    "quill": "^1.3.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
