--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,11 @@ motor==3.3.2
 redis==5.0.1
 httpx==0.26.0
 python-multipart==0.0.6
+
+# Milvus 向量数据库
+pymilvus==2.3.3
+
+# Rerank 模型
+transformers==4.36.2
+torch==2.1.2
+
