--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,14 @@ langchain-community==0.0.10
 pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+pymongo==4.6.0
 motor==3.3.2
 redis==5.0.1
 httpx==0.26.0
 python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
 
 # Milvus 向量数据库
 pymilvus==2.3.3
