--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,6 +139,15 @@ services:
     environment:
       - MONGODB_URI=mongodb://mongodb:27017
       - REDIS_URL=redis://redis:6379
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-sk-dummy}
+      - OPENAI_MODEL=${OPENAI_MODEL:-qwen-plus}
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL:-https://dashscope.aliyuncs.com/compatible-mode/v1}
+      - MILVUS_HOST=milvus
+      - MILVUS_PORT=19530
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=uniknow123
     depends_on:
       - mongodb
       - redis
