--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,11 @@ services:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=uniknow123
+      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_BUCKET_NAME=uniknow-documents
+      - MINIO_USE_SSL=false
     depends_on:
       - mongodb
       - redis
