feat: 实现智谱 Rerank 集成，本地 BGE 作为兜底方案
- 新增 ZhipuRerankService 类，支持智谱 AI GLM-rerank 模型
- 新增 HybridRerankService 混合服务，按优先级选择：智谱 > 本地 BGE > 简单规则
- 新增配置项：ZHIPU_API_KEY、ZHIPU_RERANK_MODEL、ZHIPU_RERANK_ENABLED
- 添加 zhipuai SDK 依赖
- 更新 .env.example 添加智谱配置示例

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,6 +8,16 @@ OPENAI_MODEL=qwen-plus
 OPENAI_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 EMBEDDING_MODEL=text-embedding-v2
 
+# 智谱 AI Rerank 配置（优先使用）
+ZHIPU_API_KEY=your-zhipu-api-key-here
+ZHIPU_RERANK_MODEL=glm-rerank
+ZHIPU_RERANK_ENABLED=true
+
+# 本地 BGE Rerank 配置（兜底方案）
+RERANK_MODEL=BAAI/bge-reranker-v2-m3
+RERANK_DEVICE=cpu
+RERANK_ENABLED=true
+
 # 应用配置
 APP_HOST=0.0.0.0
 APP_PORT=8000
