--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "bcrypt>=4.1.2",
-    "zhipuai>=2.0.0",
+    "dashscope>=1.14.0",
 ]
 
 [build-system]
